tests/NormalTests/paczka1/small_fuzzy/49577427.err
Error in line 4: torESJ A467 69,2
Error in line 8: E4CQa1h A763 13,3
Error in line 6: A467 S495 87,0
